Fix issue with account cards overflowing width of parent element

--- a/src/frontend/components/App.css
+++ b/src/frontend/components/App.css
@@ -10,6 +10,7 @@
 .accounts {
   flex: 0 0 18rem;
   padding: 0.5rem;
+  width: 18rem;
 }
 
 .calendar {
